[package]
name = "naolibexplorer"
version = "0.1.0"
edition = "2021"
rustflags = [""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = [
    "v1_4",
    "gtk_v4_10",
] }
chrono = { version = "0.4.31", features = ["serde"] }
gtk = { version = "0.7.3", package = "gtk4", features = [
    "v4_10",
    "gnome_45",
    "xml_validation",
    "blueprint",
] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
